# dotfiles

./: .gitignore  .luarc.json  .sops.yaml  README.md  flake.nix  gtk.scss  justfile  nix.nix  overlay.nix  result  rice.json  rice.nix  secrets.yaml  sops.nix  todo.norg  wsl.nix
bash/: .bashrc
bspwm/.config/bspwm/: bspwmrc
common/: default.nix
darwin/: default.nix
doom-emacs/.doom.d/: config.el  init.el  packages.el
dunst/.config/dunst/: dunstrc
emacs/.emacs.d/: .gitignore  README.org  init.el
fish/.config/fish/: config.fish  fish_plugins
gtk/: .gtkrc-2.0
gtk/.config/gtk-3.0/: settings.ini
home/: blueballs.nix  default.nix  fish.fish
home/darwin/: default.nix
home/default/: default.nix  xdg.nix  xplr.fnl  yazi.fnl
home/default/oi/: default.nix  lock.json  oi.nim  shell.nix
home/editors/: default.nix  emacs.el  emacs.nix  emacs.org
home/editors/doom.d/: config.el  init.el  packages.el
home/gaming/: default.nix
home/garbage/: default.nix  discord.css
home/gui/: default.nix  discord.scss  firefox.scss  wezterm.fnl
home/hosts/: machine-nixos.nix  thonkpad.nix
home/hosts/machine-nixos/: default.nix  gaming.nix
home/linux/: audio.nix  default.nix  wayland.nix  x.nix
home/linux/awesome/: keys.fnl
home/linux/x/: default.nix
home/neovim/: default.nix
home/nvim/: default.nix
home/os-specific/: darwin.nix
home/os-specific/linux/: audio.nix  default.nix  gtk.scss
home/web/: default.nix
home/wsl/: default.nix
hosts/darwin/machine-darwin/: default.nix
hosts/machine/: default.nix
hosts/nixos/machine-nixos/: default.nix  virt.nix
hosts/nixos/thonkpad/: default.nix  kmonad.kbd
hosts/thonkpad/: default.nix
hosts/wsl/: default.nix
kitty/.config/kitty/: kitty.conf
neofetch/.config/neofetch/: config.conf
nix/.config/nixpkgs/: flake.nix  (+1 more)
nixos/: audio.nix  default.nix  gaming.nix  gui.nix  kmonad.kbd  virt.nix
profiles/: audio.nix  core.nix  gaming.nix  gui.nix  virt.nix
profiles/core/: darwin.nix  nixos.nix
starship/.config/: starship.toml
topgrade/.config/: topgrade.toml
users/: bandithedoge-wsl.nix  bandithedoge.nix
users/profiles/os-specific/linux/x/xmonad/: default.nix  fourmolu.yaml  my-xmonad.cabal  shell.nix
users/profiles/os-specific/linux/x/xmonad/my-xmonad/: Main.hs  Rice.hs
users/profiles/x/rofi/: pyproject.toml
users/profiles/x/rofi/keepass/: __init__.py
users/profiles/x/rofi/power/: __init__.py
users/profiles/x/xmonad/: default.nix  fourmolu.yaml  my-xmonad.cabal  shell.nix
users/profiles/x/xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
users/profiles/x/xmonad/dist-newstyle/packagedb/ghc-9.0.2/: package.cache
users/profiles/x/xmonad/lib/: Rice.hs
users/profiles/x/xmonad/nix/: sources.json
users/profiles/x/xmonad/taffybar/: Main.hs  taffybar.css
users/profiles/x/xmonad/xmobar/: Main.hs
users/profiles/x/xmonad/xmonad/: Main.hs
windows/: autoexec.cfg  nvim_init.lua  powershell.ps1  terminal.json  topgrade.toml  wezterm.lua  winget.json
windows/.dotter/: global.toml
xinit/: .xinitrc
xmonad/: .xmobarrc
xmonad/.xmonad/: xmonad.hs
zsh/: .zshrc
(+198 files in other folders)
