[tool.poetry]
name = "rofi-stuff"
version = "0.1.0"
description = "Personal rofi scripts"
authors = ["bandithedoge <bandithedoge@protonmail.com>"]
packages = [
  {include = "keepass"},
  {include = "power"}
]

[tool.poetry.dependencies]
python = "^3.10"
pykeepass = "^4.0.3"
python-rofi-phfn = "^1.0.3"
rofi-menu = "^0.6"

[tool.poetry.scripts]
keepass = "keepass:main"
power = "power:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
