cabal-version: 2.0
name:          my-xmonad
version:       0.1.0.0
build-type:    Simple

library rice
  hs-source-dirs:   lib
  default-language: Haskell2010
  exposed-modules:  Rice
  build-depends:
      aeson
    , base
    , bytestring
    , xdg-basedir

executable my-xmonad
  hs-source-dirs:   xmonad
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base
    , containers
    , relude
    , rice
    , xmonad              >=0.17.0
    , xmonad-contrib      >=0.17.0
    , xmonad-entryhelper

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

executable my-taffybar
  hs-source-dirs:   taffybar
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      alsa-core
    , alsa-mixer
    , base
    , colour
    , data-default
    , gi-gtk
    , mtl
    , relude
    , rice
    , taffybar
    , text
    , transformers

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)
