cabal-version: 3.4
name:          my-xmonad
version:       0

executable my-xmonad
  main-is:        Main.hs
  hs-source-dirs: my-xmonad
  other-modules:  Rice
  build-depends:
    , aeson
    , base
    , bytestring
    , dbus
    , utf8-string
    , xdg-basedir
    , xmonad              >=0.17.0
    , xmonad-contrib      >=0.17.0
    , xmonad-dbus
    , xmonad-entryhelper
